modified duplicate path
